# AgroConnect

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  .sample.env  Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/v1/: config.py  main.py  models.py
backend/app/v1/auth/: managers.py  responseModels.py  router.py  schemas.py
backend/app/v1/cart/: responseModels.py  router.py  schemas.py
backend/app/v1/consumer/: responseModels.py  router.py  schemas.py
backend/app/v1/farmer/: responseModels.py  router.py  schemas.py
backend/app/v1/marketplace/: responseModels.py  router.py
backend/app/v1/orders/: responseModels.py  router.py  schemas.py
backend/app/v1/utils/: HTTPStatus.py  database.py  enumerations.py  otp.py  produce_tag.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/agroConnect/: package-lock.json  package.json
frontend/agroConnect/src/: App.jsx  main.jsx
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ConsumerOrderCard.jsx  FarmerOrderCard.jsx  cartCard.jsx  footer.jsx  fullScreenLoader.jsx  header.jsx  searchProduct.jsx  sideNavbarConsumer.jsx  sideNavbarFarmer.jsx  template.jsx
frontend/src/context/: context.jsx
frontend/src/pages/: AIChat.jsx  OrderDetails.jsx  addProductBot.jsx  cart.jsx  consumerDashboard.jsx  consumerOrder.jsx  consumerProfile.jsx  editConsumerProfile.jsx  editFarmerProfile.jsx  editProduct.jsx  farmerAddProduct.jsx  farmerDashboard.jsx  farmerOrder.jsx  farmerProduct.jsx  farmerProductDetails.jsx  farmerProfile.jsx  farmerproductpage.jsx  (+6 more)
(+36 files in other folders)
