[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "geoalchemy2>=0.17.1",
    "passlib>=1.7.4",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
